[gd_scene load_steps=4 format=3 uid="uid://bcsu7f3qetsbf"]

[ext_resource type="Script" path="res://UI/merchant/merchant-ui.gd" id="1_3ga05"]
[ext_resource type="Texture2D" uid="uid://bmw5w0b76rnby" path="res://assets/UI/components/panel-container-1.png" id="2_jirox"]
[ext_resource type="Texture2D" uid="uid://c5efwq8xwq1dj" path="res://assets/resources/material/Gold.png" id="3_q3cbd"]

[node name="MerchantUI" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(800, 400)
script = ExtResource("1_3ga05")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -502.0
offset_top = -340.0
offset_right = 498.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jirox")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 30

[node name="LocationContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="PanelContainer" type="PanelContainer" parent="NinePatchRect/MarginContainer/LocationContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "
"

[node name="PanelContainer3" type="PanelContainer" parent="NinePatchRect/MarginContainer/LocationContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Buy" type="Button" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
text = "Buy"
flat = true

[node name="Sell" type="Button" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
text = "Sell"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_q3cbd")
expand_mode = 2

[node name="TotalGold" type="Label" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3/HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/MarginContainer/LocationContainer"]
custom_minimum_size = Vector2(800, 375)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="Resources" type="VBoxContainer" parent="NinePatchRect/MarginContainer/LocationContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="PanelContainer2" type="PanelContainer" parent="NinePatchRect/MarginContainer/LocationContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_q3cbd")
expand_mode = 2

[node name="TotalCost" type="Label" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2/HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Purchase" type="Button" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "Purchase"
flat = true

[node name="Leave" type="Button" parent="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Perhaps not"
flat = true

[connection signal="pressed" from="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3/HBoxContainer/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/LocationContainer/PanelContainer3/HBoxContainer/Sell" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2/HBoxContainer/Purchase" to="." method="_on_purchase_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/LocationContainer/PanelContainer2/HBoxContainer/Leave" to="." method="_on_leave_pressed"]
